add fastq filter by quality function

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,6 @@
 2. scutls barcode -e
     - if -e is 0~1, treat it as percentage and calculate allowed error automatically by multipying the barcode 1h_full_length_read
     - add -s option in addition to -e, which means that only substitutions are allowed not error.
+3. scutls fasta --range 
+    - to cut out specified range out of a fasta file 
+    - smiliar for fastq?
